fixed taskAdded router time, fixed xscrollbar on summary

--- a/join/src/app/main-content/summary/summary.scss
+++ b/join/src/app/main-content/summary/summary.scss
@@ -205,6 +205,7 @@ section {
     background: white;
     border-radius: 10px;
     padding: 24px 48px;
+    margin-right: 8px;
     transition: all 150ms ease-in-out;
     >p {
         font-size: 64px;
@@ -231,6 +232,7 @@ section {
     background: white;
     border-radius: 10px;
     padding: 24px 48px;
+    margin-right: 8px;
     transition: all 150ms ease-in-out;
     >p {
         font-size: 64px;
@@ -466,15 +468,15 @@ section {
     }
 
     .top_row_overview {
-        width: 300px;
+        width: 290px;
     }
 
     .middle_row_overview {
-        width: 300px;
+        width: 290px;
     }
 
     .upcoming_deadline {
-        width: 300px;
+        width: 290px;
         padding: 8px 0;
     }
     
